# leyen

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  com.github.leyen.desktop  flake.nix  leyen.spec  still-freezes.md
.copr/: Makefile
assets/usr/share/bash-completion/completions/: leyen.bash
assets/usr/share/zsh/site-functions/: _leyen
docs/: ARCHITECTURE_REFACTOR_REVIEW.md  configuration.md  installation.md  shell-completions.md  troubleshooting.md  usage.md
notes/: async_refactor_plan.md  completion.md  plan.md
packaging/usr/share/applications/: com.github.sachesi.leyen.desktop
packaging/usr/share/bash-completion/completions/: leyen.bash
packaging/usr/share/fish/vendor_completions.d/: leyen.fish
packaging/usr/share/zsh/site-functions/: _leyen
rpmbuild/RPMS/x86_64/: leyen-0.1.0-1.fc43.x86_64.rpm
rpmbuild/SRPMS/: leyen-0.1.0-1.fc43.src.rpm
src/: cli.rs  config.rs  desktop.rs  icons.rs  instance.rs  launch.rs  logging.rs  main.rs  models.rs  paths.rs  prefix_tools.rs  proton.rs  tools.rs  umu.rs
src/runtime/: mod.rs  proton.rs  umu.rs
src/ui/: deps_dialog.rs  game_dialogs.rs  log_window.rs  mod.rs  running_games.rs  settings.rs
src/ui/components/: game_card.rs  group_card.rs  icon.rs  mod.rs
src/ui/utils/: mod.rs
