[package]
name = "leyen"
version = "0.1.2"
edition = "2024"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
uuid = { version = "1.23.0", features = ["v4"] }
libc = "0.2"
shlex = "1.3"
