[package]
name = "leyen"
version = "0.1.3"
edition = "2024"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.23.0", features = ["v4"] }
libc = "0.2"
shlex = "1.3"
image = { version = "0.25", default-features = false, features = ["ico", "jpeg", "png"] }
pelite = "0.10"
