[package]
authors = ["sachesi <xsachesi@pm.me>"]
name = "leyen"
version = "0.2.13"
edition = "2024"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_14"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.23.0", features = ["v4"] }
libc = "0.2"
shlex = "1.3"
image = { version = "0.25", default-features = false, features = ["ico", "jpeg", "png"] }
pelite = "0.10"
directories = "6.0.0"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
log = "0.4.29"
tokio = { version = "1.52.1", features = ["full"] }
futures = "0.3.32"
fastrand = "2.4.1"
sha2 = "0.10.8"
hex = "0.4.3"
chrono = "0.4"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.27.0"
